update main structure

--- a/.gitignore
+++ b/.gitignore
@@ -39,7 +39,7 @@ bld/
 
 # Visual Studio 2017 auto generated files
 Generated\ Files/
-
+**/secrets.env
 # MSTest test Results
 [Tt]est[Rr]esult*/
 [Bb]uild[Ll]og.*
