--- a/4_accelerators/01-rag-agent/ingestion-pipeline/pipeline.yml
+++ b/4_accelerators/01-rag-agent/ingestion-pipeline/pipeline.yml
@@ -2,7 +2,7 @@ $schema: https://azuremlschemas.azureedge.net/latest/pipelineJob.schema.json
 type: pipeline
 display_name: rag-agent
 settings:
-  force_rerun: false
+  force_rerun: true
 
 jobs:
 
