update env names and env

--- a/4_accelerators/01-rag-agent/ingestion-pipeline/chunk_docs/conda.yml
+++ b/4_accelerators/01-rag-agent/ingestion-pipeline/chunk_docs/conda.yml
@@ -14,7 +14,7 @@ dependencies:
   - openai
   - pandas
   - pdf2image
-  - opencv-python
+  - opencv-python-headless
   - semchunk
   - tenacity
   - tiktoken
