--- a/4_accelerators/01-rag-agent/ingestion-pipeline/pipeline.yml
+++ b/4_accelerators/01-rag-agent/ingestion-pipeline/pipeline.yml
@@ -1,8 +1,20 @@
 $schema: https://azuremlschemas.azureedge.net/latest/pipelineJob.schema.json
 type: pipeline
 display_name: rag-agent
+description: "Pipeline to ingest and index documents for RAG 2.0 agent."
 settings:
   force_rerun: false
+
+inputs:
+  pipeline_job_gpt4o_deployment_name: "gpt-4o-global"
+  pipeline_job_whisper_deployment_name: "whisper"
+  pipeline_job_openai_embedding_model: "text-embedding-3-large"
+  pipeline_job_aoai_api_version: "2024-06-01"
+  pipeline_job_doc_intel_api_version: "2024-02-29-preview"
+  pipeline_job_speech_region: "eastus"
+  pipeline_job_max_chunk_size: 8000
+  pipeline_job_azure_ai_search_index_name: "rag-agent"
+  pipeline_job_vector_search_dimensions: 3072
 
 jobs:
 
@@ -13,6 +25,13 @@ jobs:
         type: uri_folder
         mode: ro_mount
         path: azureml://datastores/datalake/paths/rag-agent/docs
+      gpt4o_deployment_name: ${{parent.inputs.pipeline_job_gpt4o_deployment_name}}
+      whisper_deployment_name: ${{parent.inputs.pipeline_job_whisper_deployment_name}}
+      openai_embedding_model: ${{parent.inputs.pipeline_job_openai_embedding_model}}
+      aoai_api_version: ${{parent.inputs.pipeline_job_aoai_api_version}}
+      doc_intel_api_version: ${{parent.inputs.pipeline_job_doc_intel_api_version}}
+      speech_region: ${{parent.inputs.pipeline_job_speech_region}}
+      max_chunk_size: ${{parent.inputs.pipeline_job_max_chunk_size}}
     outputs:
       chunks_folder:
         type: uri_folder
@@ -40,12 +59,27 @@ jobs:
       entry_script: chunk_docs.py
       environment: azureml:rag-agent-chunkdocs@latest
       program_arguments: --chunks_folder ${{outputs.chunks_folder}}
+                         --log_file ${{outputs.log_file}}
+                         --gpt4o_deployment_name ${{inputs.gpt4o_deployment_name}}
+                         --whisper_deployment_name ${{inputs.whisper_deployment_name}}
+                         --openai_embedding_model ${{inputs.openai_embedding_model}}
+                         --aoai_api_version ${{inputs.aoai_api_version}}
+                         --doc_intel_api_version ${{inputs.doc_intel_api_version}}
+                         --speech_region ${{inputs.speech_region}}
+                         --max_chunk_size ${{inputs.max_chunk_size}}
       append_row_to: ${{outputs.log_file}}
 
   create_index:
       type: command
+      inputs:
+        azure_ai_search_index_name: ${{parent.inputs.pipeline_job_azure_ai_search_index_name}}
+        azure_ai_vector_search_dimensions: ${{parent.inputs.pipeline_job_vector_search_dimensions}}
       code: index_chunks
-      command: python create_index.py --log_file=${{outputs.log_file}}
+      command: >- 
+        python create_index.py 
+        --log_file=${{outputs.log_file}} 
+        --azure_ai_search_index_name=${{inputs.azure_ai_search_index_name}} 
+        --azure_ai_vector_search_dimensions=${{inputs.azure_ai_vector_search_dimensions}}
       outputs:
         log_file:
           type: uri_file
@@ -68,6 +102,7 @@ jobs:
         type: uri_folder
         mode: ro_mount
         path: ${{parent.jobs.chunk_docs.outputs.chunks_folder}}
+      azure_ai_search_index_name: ${{parent.inputs.pipeline_job_azure_ai_search_index_name}}
     outputs:
       log_file:
         type: uri_file
@@ -90,4 +125,6 @@ jobs:
       code: index_chunks
       entry_script: index_chunks.py
       environment: azureml:rag-agent-indexchunks@latest
+      program_arguments: --log_file ${{outputs.log_file}}
+                         --azure_ai_search_index_name ${{inputs.azure_ai_search_index_name}}
       append_row_to: ${{outputs.log_file}}
