--- a/4_accelerators/01-rag-agent/rag-agent-promptflow/flow.dag.yaml
+++ b/4_accelerators/01-rag-agent/rag-agent-promptflow/flow.dag.yaml
@@ -171,5 +171,6 @@ nodes:
     chat_history: ${inputs.chat_history}
     search_results: ${ai_search_query_python_node.output}
     user_input: ${inputs.chat_input}
+    entities_and_topics: ${entity_topic_tracking_query_rewrite_node.output}
   connection: ragagent20aiservices_aoai
   api: chat
